--- a/app/index.html
+++ b/app/index.html
@@ -3,26 +3,50 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My AngularJS App</title>
+  <title>1B Grocery List Manager</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/normalize.css">
-  <link rel="stylesheet" href="bower_components/html5-boilerplate/css/main.css">
-  <link rel="stylesheet" href="css/app.css"/>
+  <!-- Bootstrap core CSS -->
+  <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/cover.css" rel="stylesheet">
+
   <script src="bower_components/html5-boilerplate/js/vendor/modernizr-2.6.2.min.js"></script>
 </head>
 <body ng-cloak>
 
-  <ul class="menu">
-    <li><a href="#/home">home</a></li>
-    <li><a href="#/chat">chat</a></li>
-    <li ng-hide-auth><a href="#/login">login</a></li>
-    <li ng-show-auth><a href="#/account">account</a></li>
-  </ul>
+  <div class="site-wrapper">
 
-  <div ng-view></div>
+      <div class="site-wrapper-inner">
 
-  <div>AngularFire-seed v<span app-version></span></div>
+        <div id="container" class="cover-container">
+
+          <div class="masthead clearfix">
+            <div class="inner">
+              <h3 class="masthead-brand">FirstBuild</h3>
+              <ul class="nav masthead-nav">
+                <li><a href="#/home">home</a></li>
+                <li ng-hide-auth><a href="#/login">login</a></li>
+                <li ng-show-auth><a href="#/account">account</a></li>
+                <li><button href="#/home">Log Out (todo)</button></li>
+              </ul>
+            </div>
+          </div>
+
+          <!-- load the view as defined in routes.js -->
+          <div ng-view></div>
+
+          <div class="mastfoot">
+            <div class="inner">
+              <p>Cover template for <a href="http://getbootstrap.com">Bootstrap</a>, by <a href="https://twitter.com/mdo">@mdo</a>.</p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </div>
 
   <!-- In production use:
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.3.x/angular.min.js"></script>
@@ -36,6 +60,9 @@
   <script src="bower_components/firebase-simple-login/firebase-simple-login.js"></script>
   <script src="bower_components/angularfire/dist/angularfire.js"></script>
 
+  <!-- jQuery and Bootstrap
+  <script src="/vendor/jquery-1.11.1.min.js"></script>
+  <script src="/vendor/bootstrap/js/bootstrap.min.js"></script> -->
 
   <script src="js/app.js"></script>
   <script src="js/config.js"></script>
