--- a/app/index.html
+++ b/app/index.html
@@ -26,10 +26,13 @@
               <h3 class="masthead-brand">FirstBuild</h3>
               <ul class="nav masthead-nav">
                 <li><a href="#/home">home</a></li>
+                <li ng-show-auth><a href="#/containers">containers</a></li>
                 <li ng-hide-auth><a href="#/login">login</a></li>
                 <li ng-show-auth><a href="#/account">account</a></li>
-                <li ng-show-auth><button ng-click="logout()" class="btn btn-sm btn-primary btn-block">Log Out</button></li>
-
+                <li ng-show-auth><a href="#/logout">logout</a></li>
+                <!--<li ng-show-auth>
+                  <button ng-click="logout()" class="btn btn-sm btn-primary btn-block">Log Out</button>
+                </li>-->
               </ul>
             </div>
           </div>
