Add grocery list completed and view lists WIP

--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
               <h3 class="masthead-brand">FirstBuild</h3>
               <ul class="nav masthead-nav">
                 <li><a href="#/home">home</a></li>
-                <li ng-show-auth><a href="#/containers">containers</a></li>
+                <li ng-show-auth><a href="#/containers">Grocery List</a></li>
                 <li ng-hide-auth><a href="#/login">login</a></li>
                 <li ng-show-auth><a href="#/account">account</a></li>
                 <li ng-show-auth><a href="#/logout">logout</a></li>
